# TUTORIALS-ON-GENERATIVE-AI

./: .gitignore
LANGCHAIN/CHATBOT/: chatbot-with-msg-history.ipynb
LANGCHAIN/EMBED/: embedding.ipynb
LANGCHAIN/LANGSERVE/: serve.py
LANGCHAIN/LCEL/: simplellmLCEL.ipynb
LANGCHAIN/LOAD/: dataIngestion.ipynb
LANGCHAIN/OLLAMA/: app.py  ollama_embedding.ipynb
LANGCHAIN/OpenAI/: a.ipynb
LANGCHAIN/SPLIT/: htmltextsplitter.ipynb  textsplitter.ipynb
LANGCHAIN/vectorestore/: chroma_db.ipynb  faiss.ipynb  speech.txt
LANGCHAIN/vectorestore/faiss_index/: index.faiss  index.pkl
LANGRAPH/: main.ipynb  pyproject.toml  requirements.txt  with_external_tools.ipynb
RAG/: .gitignore  pyproject.toml  requirements.txt
RAG/notebook/: document.ipynb  pdf_loader.ipynb
