[project]
name = "langraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "bs4>=0.0.2",
    "chromadb>=1.4.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.127.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langserve[all]>=0.3.3",
    "langsmith>=0.5.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]
